Add get call functionality